--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     <header class = "header">
-        
+        <nav>
+            <ul class="nav">
+                <li><a href="#contacts" class="nav-link">Contacts</a></li>
+                <li><a href="#skills" class="nav-link">Skills</a></li>
+                <li><a href="#summary" class="nav-link">Summary</a></li>
+                <li><a href="#code" class="nav-link">Code</a></li>
+                <li><a href="#experience" class="nav-link">Experience</a></li>
+                <li><a href="#education" class="nav-link">Education</a></li>
+                <li><a href="#languages" class="nav-link">Languages</a></li>
+            </ul>
+        </nav>
     </header>
     <main class = "main">
         <section>
