--- a/index.html
+++ b/index.html
@@ -23,53 +23,59 @@
         </nav>
     </header>
     <main class = "main">
-        <section>
-            <img class="main-img" src="assets/img/IMG_5140.jpg" alt="my photo" width="240" height="240">
-            <h1>Maria Koroleva</h1>
-        </section>
-        <section class="section" id="contacts">
-            <h2 class="section-title">Contacts</h2>
-            <ul class="contacts-list">
-                <li>
-                  <img src="assets/img/location.png" alt="Location icon" width="30" height="30">
-                  <p>Minsk, Belarus</p>
-                </li>
-                <li>
-                  <img src="assets/img/email.png" alt="E-mail icon" width="30" height="30">
-                  <p>mkoroleva5@gmail.com</p>
-                </li>
-                <li>
-                  <img src="assets/img/telegram.png" alt="Telegram icon" width="30" height="30">
-                  <a href="https://t.me/mkoroleva5" target="_blank">@mkoroleva5</a>
-                </li>
-                <li>
-                  <img src="assets/img/github.png" alt="Github icon" width="30" height="30">
-                  <a href="https://github.com/mkoroleva5" target="_blank">mkoroleva5</a>
-                </li>
-                <li>
-                  <img src="assets/img/discord.png" alt="Discord icon" width="30" height="30">
-                  <p>Maria Koroleva (@mkoroleva5)</p>
-                </li>
-            </ul>
-        </section>
-        <section class="section" id="skills">
-            <h2 class="section-title">Skills</h2>
-        </section>
-        <section class="section" id="summary">
-            <h2 class="section-title">About me</h2>
-        </section>
-        <section class="section" id="code">
-            <h2 class="section-title">Code example</h2>
-        </section>
-        <section class="section" id="experience">
-            <h2 class="section-title">Experience</h2>
-        </section>
-        <section class="section" id="education">
-            <h2 class="section-title">Education</h2>
-        </section>
-        <section class="section" id="languages">
-            <h2 class="section-title">Languages</h2>
-        </section>
+        <div class="column-left">
+            <section class="section">
+                <img class="main-img" src="assets/img/IMG_5140.jpg" alt="my photo" width="240" height="240">
+            </section>
+            <section class="section" id="contacts">
+                <h2 class="section-title">Contacts</h2>
+                <ul class="contacts-list">
+                    <li>
+                    <img src="assets/img/location.png" alt="Location icon" width="30" height="30">
+                    <p>Minsk, Belarus</p>
+                    </li>
+                    <li>
+                    <img src="assets/img/email.png" alt="E-mail icon" width="30" height="30">
+                    <p>mkoroleva5@gmail.com</p>
+                    </li>
+                    <li>
+                    <img src="assets/img/telegram.png" alt="Telegram icon" width="30" height="30">
+                    <a href="https://t.me/mkoroleva5" target="_blank">@mkoroleva5</a>
+                    </li>
+                    <li>
+                    <img src="assets/img/github.png" alt="Github icon" width="30" height="30">
+                    <a href="https://github.com/mkoroleva5" target="_blank">mkoroleva5</a>
+                    </li>
+                    <li>
+                    <img src="assets/img/discord.png" alt="Discord icon" width="30" height="30">
+                    <p>Maria Koroleva (@mkoroleva5)</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills</h2>
+            </section>
+            <section class="section" id="languages">
+                <h2 class="section-title">Languages</h2>
+            </section>
+        </div>
+        <div class="column-right">
+            <section class="section-name">
+                <h1>Maria Koroleva</h1>
+            </section>
+            <section class="section" id="summary">
+                <h2 class="section-title">About me</h2>
+            </section>
+            <section class="section" id="code">
+                <h2 class="section-title">Code example</h2>
+            </section>
+            <section class="section" id="experience">
+                <h2 class="section-title">Experience</h2>
+            </section>
+            <section class="section" id="education">
+                <h2 class="section-title">Education</h2>
+            </section>
+        </div>
     </main>
     <footer class = "footer">
 
