feat: add text information

--- a/index.html
+++ b/index.html
@@ -54,9 +54,22 @@
             </section>
             <section class="section" id="skills">
                 <h2 class="section-title">Skills</h2>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>JavaScript (in progress)</li>
+                    <li>Git</li>
+                    <li>Photoshop</li>
+                </ul>
             </section>
             <section class="section" id="languages">
                 <h2 class="section-title">Languages</h2>
+                <ul>
+                    <li>English – B2</li>
+                    <li>Italian – B2</li>
+                    <li>Russian - native</li>
+                    <li>Belorussian - native</li>
+                </ul>
             </section>
         </div>
         <div class="column-right">
@@ -65,15 +78,50 @@
             </section>
             <section class="section" id="summary">
                 <h2 class="section-title">About me</h2>
+                <p>Having 5+ years of experience in E-commerce, I worked a lot with the technical and visual part of the site from the customer's side. I liked it and always wanted to have more expertise in this area in order to come up with interesting solutions and implement them.</p>
+                <p>I consider my strengths to be attentive to details, the ability to analyze and improve existing solutions, quickly understand new unfamiliar information. I have experience in design, work in Photoshop.</p>
             </section>
             <section class="section" id="code">
                 <h2 class="section-title">Code example</h2>
+                <code>
+                    <p>function sum(a, b) {</p>
+                    <p>return a + b;</p>
+                    <p>}</p>
+                    <br>
+                    <p>let result = sum(1, 2);</p>
+                    <p>alert( result );</p>
+                </code>
             </section>
             <section class="section" id="experience">
                 <h2 class="section-title">Experience</h2>
+                <p>2017-2022</p>
+                <p>Biogarden LLC (Minsk)</p>
+                <p>Head of E-commerce</p>
+                <br>
+                <p>2016</p>
+                <p>Farmin ALC (Minsk)</p>
+                <p>Sales representative</p>
+                <br>
+                <p>2015</p>
+                <p>Tour operator Gartour (Milan, Italy)</p>
+                <p>Tourism manager</p>
+                <br>
+                <p>2013-2014</p>
+                <p>Embassy of Italian Republic in Belarus (Minsk)</p>
+                <p>Account manager</p>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
+                <p>2011-2016</p>
+                <p>Belorussian State University, Faculty of International Relations</p>
+                <p>Qualification: economist-manager and interpreter-translator (English and Italian languages)</p>
+                <br>
+                <p>Courses</p>
+                <ul>
+                    <li>HTML and CSS Courses on codecademy.com (completed)</li>
+                    <li>JavaScript Manual on learnjavascript.ru (in progress)</li>
+                    <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                </ul>
             </section>
         </div>
     </main>
