fix: adjust image for mobile

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </header>
     <main class = "main">
         <div class="column column-left">
+            <section class="section">
+                <img class="main-img" src="assets/img/IMG_5142.jpg" alt="my photo">
+            </section>
             <section class="section-name d-lg-none">
                 <h1>Maria Koroleva</h1>
-            </section>
-            <section class="section">
-                <img class="main-img" src="assets/img/IMG_5142.jpg" alt="my photo" width="240" height="240">
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
