feat: add footer

--- a/index.html
+++ b/index.html
@@ -49,10 +49,6 @@
                     <img src="assets/img/github.png" alt="Github icon" width="30" height="30">
                     <a href="https://github.com/mkoroleva5" target="_blank">mkoroleva5</a>
                     </li>
-                    <li>
-                    <img src="assets/img/discord.png" alt="Discord icon" width="30" height="30">
-                    <p>Maria Koroleva (@mkoroleva5)</p>
-                    </li>
                 </ul>
             </section>
             <section class="section" id="skills">
@@ -154,8 +150,17 @@
             </section>
         </div>
     </main>
-    <footer class = "footer">
-
+    <footer class="footer">
+        <div>
+            <a href="https://github.com/mkoroleva5" target="_blank">
+                <img src="assets/img/github.png" alt="GitHub" width="30" height="30">
+                <p>GitHub</p>
+            </a>
+        </div>
+        <p>2022</p>
+        <a href="https://rs.school/" target="_blank">
+            <img src="assets/img/rs_school.png" alt="Rolling Scopes School" height="30">
+        </a>
     </footer>
 </body>
 </html>
