fix: style code section

--- a/index.html
+++ b/index.html
@@ -84,13 +84,12 @@
                 <h2 class="section-title">Code example</h2>
                 <pre>
                     <code>
-                    function sum(a, b) {
-                        return a + b;
-                      }
+    <span class="js-keyword">function</span> <span class="js-function">sum</span>(a, b) {
+      <span class="js-keyword">return</span> a + b;
+    }
                           
-                      let result = sum(1, 2);
-                      alert( result );
-                    </code>
+    <span class="js-keyword">let</span> <span class="js-result">result</span> = <span class="js-function">sum</span>(3, 7);
+    <span class="js-function">alert</span>( <span class="js-result">result</span> );</code>
                 </pre>
             </section>
             <section class="section" id="experience">
