fix: change image section for div

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </header>
     <main class = "main">
         <div class="column column-left">
-            <section class="section">
+            <div class="section">
                 <img class="main-img" src="assets/img/IMG_5142.jpg" alt="my photo">
-            </section>
+            </div>
             <section class="section-name d-lg-none">
                 <h1>Maria Koroleva</h1>
             </section>
