--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     <img src="assets/img/github.png" alt="Github icon" width="30" height="30">
                     <a href="https://github.com/mkoroleva5" target="_blank">mkoroleva5</a>
                     </li>
+                    <li>
+                        <img src="assets/img/discord.png" alt="Discord icon" width="30" height="30">
+                        <p>Maria Koroleva#2094</p>
+                    </li>
                 </ul>
             </section>
             <section class="section" id="skills">
@@ -157,7 +161,7 @@
             </a>
         </div>
         <p>2022</p>
-        <a href="https://rs.school/" target="_blank">
+        <a href="https://rs.school/js/" target="_blank">
             <img src="assets/img/rs_school.png" alt="Rolling Scopes School" height="30">
         </a>
     </footer>
