feat: add projects block

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#summary" class="nav-link">Summary</a></li>
                 <li><a href="#code" class="nav-link">Code</a></li>
+                <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#education" class="nav-link">Education</a></li>
                 <li><a href="#languages" class="nav-link">Languages</a></li>
@@ -34,23 +35,23 @@
                 <h2 class="section-title">Contacts</h2>
                 <ul class="contacts-list">
                     <li>
-                    <img src="assets/img/location.png" alt="Location icon" width="30" height="30">
-                    <p>Minsk, Belarus</p>
+                        <img src="assets/img/location.png" alt="Location icon" width="25" height="25">
+                        <p>Minsk, Belarus</p>
                     </li>
                     <li>
-                    <img src="assets/img/email.png" alt="E-mail icon" width="30" height="30">
-                    <p>mkoroleva5@gmail.com</p>
+                        <img src="assets/img/email.png" alt="E-mail icon" width="25" height="25">
+                        <p>mkoroleva5@gmail.com</p>
                     </li>
                     <li>
-                    <img src="assets/img/telegram.png" alt="Telegram icon" width="30" height="30">
-                    <a href="https://t.me/mkoroleva5" target="_blank">@mkoroleva5</a>
+                        <img src="assets/img/telegram.png" alt="Telegram icon" width="25" height="25">
+                        <a href="https://t.me/mkoroleva5" target="_blank">@mkoroleva5</a>
                     </li>
                     <li>
-                    <img src="assets/img/github.png" alt="Github icon" width="30" height="30">
-                    <a href="https://github.com/mkoroleva5" target="_blank">mkoroleva5</a>
+                        <img src="assets/img/github.png" alt="Github icon" width="25" height="25">
+                        <a href="https://github.com/mkoroleva5" target="_blank">mkoroleva5</a>
                     </li>
                     <li>
-                        <img src="assets/img/discord.png" alt="Discord icon" width="30" height="30">
+                        <img src="assets/img/discord.png" alt="Discord icon" width="25" height="25">
                         <p>Maria Koroleva#2094</p>
                     </li>
                 </ul>
@@ -71,7 +72,7 @@
                     <li>English – B2</li>
                     <li>Italian – B2</li>
                     <li>Russian - native</li>
-                    <li>Belorussian - native</li>
+                    <li>Belarusian - native</li>
                 </ul>
             </section>
         </div>
@@ -85,19 +86,28 @@
                 <p>Having 5+ years of experience in E-commerce, I worked a lot with the technical and visual part of the site from the customer's side. I liked it and always wanted to have more expertise in this area in order to come up with interesting solutions and implement them.</p>
                 <p>I consider my strengths to be attentive to details, the ability to analyze and improve existing solutions, quickly understand new unfamiliar information. I have experience in design, work in Photoshop.</p>
             </section>
-            <section class="section" id="code">
-                <h2 class="section-title">Code example</h2>
-                <hr>
-                <pre>
-                    <code>
+            <div class="projects-block">
+                <section class="section" id="code">
+                    <h2 class="section-title">Code example</h2>
+                    <hr>
+                    <pre>
+                        <code>
     <span class="js-keyword">function</span> <span class="js-function">sum</span>(a, b) {
       <span class="js-keyword">return</span> a + b;
     }
                           
-    <span class="js-keyword">let</span> <span class="js-result">result</span> = <span class="js-function">sum</span>(3, 7);
+    <span class="js-keyword">let</span> <span class="js-result">result</span> = <span class="js-function">sum</span>(3, 7);   
     <span class="js-function">alert</span>( <span class="js-result">result</span> );</code>
-                </pre>
-            </section>
+                    </pre>
+                </section>
+                <section class="section" id="projects">
+                    <h2 class="section-title">Projects</h2>
+                    <hr>
+                    <a href="" target="_blank">
+                        <img src="assets/img/cv-project.jpg" alt="CV Project">
+                    </a>
+                </section>
+            </div>
             <section class="section" id="experience">
                 <h2 class="section-title">Experience</h2>
                 <hr>
@@ -108,7 +118,6 @@
                         <p>Head of E-commerce</p>
                     </div>
                 </div>
-                <br>
                 <div class="exp">
                     <p class="date">2016</p>
                     <div class="exp-list">
@@ -116,7 +125,6 @@
                         <p>Sales representative</p>
                     </div>
                 </div>
-                <br>
                 <div class="exp">
                     <p class="date">2015</p>
                     <div class="exp-list">
@@ -124,7 +132,6 @@
                         <p>Tourism manager</p>
                     </div>
                 </div>
-                <br>
                 <div class="exp">
                     <p class="date">2013-2014</p>
                     <div class="exp-list">
@@ -143,7 +150,6 @@
                         <p>Qualification: economist-manager and interpreter-translator (English and Italian languages)</p>
                     </div>
                 </div>
-                <br>
                 <div class="exp">
                     <p class="date">Courses</p>
                     <div class="exp-list">
