feat: add layout for burger menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <header class = "header">
+        <div class="nav-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <nav>
             <ul class="nav">
                 <li><a href="#contacts" class="nav-link">Contacts</a></li>
