--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
 <body>
     <header class = "header">
         <div class="nav-menu">
-            <span></span>
-            <span></span>
-            <span></span>
+            <input type="checkbox" id="button">
+            <label for="button">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <nav>
+                <ul class="nav">
+                    <li><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li><a href="#skills" class="nav-link">Skills</a></li>
+                    <li><a href="#summary" class="nav-link">Summary</a></li>
+                    <li><a href="#code" class="nav-link">Code</a></li>
+                    <li><a href="#projects" class="nav-link">Projects</a></li>
+                    <li><a href="#experience" class="nav-link">Experience</a></li>
+                    <li><a href="#education" class="nav-link">Education</a></li>
+                    <li><a href="#languages" class="nav-link">Languages</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul class="nav">
-                <li><a href="#contacts" class="nav-link">Contacts</a></li>
-                <li><a href="#skills" class="nav-link">Skills</a></li>
-                <li><a href="#summary" class="nav-link">Summary</a></li>
-                <li><a href="#code" class="nav-link">Code</a></li>
-                <li><a href="#projects" class="nav-link">Projects</a></li>
-                <li><a href="#experience" class="nav-link">Experience</a></li>
-                <li><a href="#education" class="nav-link">Education</a></li>
-                <li><a href="#languages" class="nav-link">Languages</a></li>
-            </ul>
-        </nav>
     </header>
     <main class = "main">
         <div class="column column-left">
