fix: adjust menu button animation

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <header class = "header">
         <div class="nav-menu">
             <input type="checkbox" id="button">
-            <label for="button">
-                <span></span>
-                <span></span>
+            <label class="menu-button" for="button">
                 <span></span>
             </label>
             <nav>
