fix: adjust burger menu

--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
             <label class="menu-button" for="button">
                 <span></span>
             </label>
-            <nav>
+            <nav class="nav-list">
                 <ul class="nav">
                     <li><a href="#contacts" class="nav-link">Contacts</a></li>
                     <li><a href="#skills" class="nav-link">Skills</a></li>
                     <li><a href="#summary" class="nav-link">Summary</a></li>
                     <li><a href="#code" class="nav-link">Code</a></li>
                     <li><a href="#projects" class="nav-link">Projects</a></li>
-                    <li><a href="#experience" class="nav-link">Experience</a></li>
-                    <li><a href="#education" class="nav-link">Education</a></li>
+                    <li><a href="#experience" class="nav-link">Experience</a></li>                        <li><a href="#education" class="nav-link">Education</a></li>
                     <li><a href="#languages" class="nav-link">Languages</a></li>
                 </ul>
             </nav>
@@ -109,7 +108,7 @@
                 <section class="section" id="projects">
                     <h2 class="section-title">Projects</h2>
                     <hr>
-                    <a href="" target="_blank">
+                    <a href="https://mkoroleva5.github.io/rsschool-cv/" target="_blank">
                         <img src="assets/img/cv-project.jpg" alt="CV Project">
                     </a>
                 </section>
