refactor: change structure of css file

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main class = "main">
         <div class="column column-left">
             <div class="section">
-                <img class="main-img" src="assets/img/IMG_5142.jpg" alt="my photo">
+                <img class="main-img" src="assets/img/my-photo.jpg" alt="my photo">
             </div>
             <section class="section-name d-lg-none">
                 <h1>Maria Koroleva</h1>
@@ -177,7 +177,7 @@
         </div>
         <p>2022</p>
         <a href="https://rs.school/js/" target="_blank">
-            <img src="assets/img/rs_school.png" alt="Rolling Scopes School" height="30">
+            <img src="assets/img/rs-school.png" alt="Rolling Scopes School" height="30">
         </a>
     </footer>
 </body>
