fix: adjust project screenshot link

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <p>Gem Puzzle</p>
               </a>
               <a class="projects-item" href="https://mkoroleva5.github.io/Momentum-App/" target="_blank">
-                <img src="assets/img/momentum-screenshot.jpg" alt="Momentum app" />
+                <img src="assets/img/momentum-screenshot.JPG" alt="Momentum app" />
                 <p>Momentum App</p>
               </a>
               <a class="projects-item" href="https://mkoroleva5.github.io/codejam-eldritch/" target="_blank">
