feat: update projects

--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
                 <div class="project-info">
                   <a
                     class="project-title"
+                    href="https://github.com/mkoroleva5/rs_GraphiQL_front"
+                    target="_blank"
+                    >GraphiQL</a
+                  >
+                  <div>
+                    Clone of GraphiQL - GraphQL integrated development environment (IDE).
+                  </div>
+                  <div>Tech stack: React, TypeScript, Vite, Redux Toolkit, Firebase, Axios, i18n, CodeMirror, React Hook Form, React Toastify</div>
+                </div>
+              </div>
+              <div class="projects-item">
+                <div class="project-info">
+                  <a
+                    class="project-title"
                     href="https://github.com/MOONcitizenX/rs-blazing-8-client"
                     target="_blank"
                     >Blazing 8s</a
@@ -129,21 +143,6 @@
                   >
                   <div>React app with Unsplash API fetching, forms, own server and SSR.</div>
                   <div>Tech stack: React, TypeScript, ExpressJS, SSR, Vite, Vitest, React Testing Library, Cypress, Redux Toolkit, AsyncThunk, React hook form</div>
-                </div>
-              </div>
-              <div class="projects-item">
-                <div class="project-info">
-                  <a
-                    class="project-title"
-                    href="https://github.com/mkoroleva5/async-race"
-                    target="_blank"
-                    >Async Race</a
-                  >
-                  <div>
-                    Race created using communication with a server (fetch, REST API), async coding /
-                    promises and JS animations.
-                  </div>
-                  <div>Tech stack: JavaScript, HTML5, CSS3, Vite</div>
                 </div>
               </div>
               <div class="projects-item">
